<resources>
    <string name="app_name">Ballon Popper</string>
    <string name="level_label">Level :\u0020\u0020\u0020</string>
    <string name="score_label">Nilai :\u0020\u0020\u0020</string>
    <string name="max_number">9</string>
    <string name="popping_pin">Popping Pin</string>
    <string name="Start_Level">Mulai Level %d</string>
    <string name="Finish_Level">Kamu Menyelesaikan Level %d</string>
    <string name="Stop_Game">Hentikan Permainan</string>
    <string name="Start_Game">Mulai Permainan</string>
    <string name="game_over">Game Over</string>
    <string name="nilai_anda">Nilai Kamu :</string>
    <string name="selesai">selesai</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="n_a">N/A</string>
    <string name="judul">BALLOON POPPER</string>
    <string name="MUb1">MULAI PERMAINAN</string>
    <string name="MUb2">NILAI TERTINGGI</string>
    <string name="MUb3">CARA BERMAIN</string>
    <string name="MUb4">TENTANG</string>
    <string name="MUb5">KELUAR</string>
    <string name="kembali">KEMBALI</string>
    <string name="nilai">Nilai</string>
    <string name="nama">nama</string>
    <string name="nilai_tertinggi">Nilai Tertinggi</string>
    <string name="cara_bermain">Cara Bermain</string>
    <string name="howto1">1. Letuskan balon dengan cara menyentuhnya</string>
    <string name="howto2">2. Setiap kamu naik level, balon akan lebih cepat dari sebelumnya</string>
    <string name="howto3">3. Setiap balon yang lolos, jarum akan berkurang satu</string>
    <string name="howto4">4. Jarum habis, maka game over</string>
    <string name="tentang_nama">Nama : Alfian Rehanusa Wibowo</string>
    <string name="tentang_kelas">Kelas : 2TIA</string>
    <string name="tentang_nrp">NRP : 2102167051</string>
    <string name="tentang_judulpa">Judul PA : Aplikasi Permainan Ballon Popper</string>
    <string name="tentang">Tentang</string>
    <string name="level">Level :</string>
    <string name="namaku">Alfian Rehanusa Wibowo</string>
    <string name="versi">Balloon Popper V1.0.0</string>
    <string name="keterangan">Balloon Popper adalah sebuah permainan meletuskan balon
        yang sangat mudah dan menyenangkan. </string>
    <string name="level_1">LEVEL 1</string>
    <string name="level_2">LEVEL 2</string>
    <string name="pilih_level">Pilih Level</string>
    <string name="level_3">LEVEL 3</string>
    <string name="level_4">LEVEL 4</string>
    <string name="level_5">LEVEL 5</string>
    <string name="mulai">mulai</string>
</resources>
